--- a/graph.html
+++ b/graph.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <title>Des objets connectés autonomes</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="script/jquery.js"></script>
     <script async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 </head>
 
@@ -92,6 +92,6 @@
     </footer>
     <div id="tothetop"><img src="tothetop.png" title="Vers le haut de la page" /></div>
 </body>
-<script src="script.js"></script>
+<script src="script/script.js"></script>
 
 </html>
