--- a/solar.html
+++ b/solar.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <title>Des objets connectés autonomes</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="script/jquery.js"></script>
     <script async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 </head>
 
@@ -52,8 +52,8 @@
 
         <h2>L'énergie solaire</h2>
 
-        <p>L'énergie solaire est maintenant maîtrisée et de plus en plus utilisée. C'est une énergie renouvelable possédant un bon rendement (approximativement 15%) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
-            objet connecté, qu'il soit à l'intérieur ou à l'extérieur du bâtiment.<br/>
+        <p>L'énergie solaire est maintenant maîtrisée et de plus en plus utilisée. C'est une énergie renouvelable possédant un bon rendement (approximativement 15%) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit
+            panneau solaire afin d'alimenter un objet connecté, qu'il soit à l'intérieur ou à l'extérieur du bâtiment.<br/>
         </p>
 
         <p>
@@ -156,7 +156,8 @@
         <p>Le panneau solaire est affecté par les changements de résistance, car comme U=RxI, nous aurions une droite dans le cas contraire.</p>
         <p>Nous faisons ensuite la tension en fonction de la résistance, nous obtenons ceci :</p>
         <img src="graph/sol/tr.png" />
-        <p>On observe une diminution de la tension, ce qui est logique puisque \(U=R\times I\) et que l'intensité augmente plus lentement que la résistance baisse mais pas de manière linéaire. La résistance influe donc sur le voltage que peut produire un panneau solaire.</p>
+        <p>On observe une diminution de la tension, ce qui est logique puisque \(U=R\times I\) et que l'intensité augmente plus lentement que la résistance baisse mais pas de manière linéaire. La résistance influe donc sur le voltage que peut produire un
+            panneau solaire.</p>
         <p>Nous pouvons ensuite refaire le même tableau en ajoutant la colonne de puissance, qui s'obtient par la simple multiplication de l'intensité et de la tension (P= UxI):</p>
 
 
@@ -253,14 +254,15 @@
         <img src="graph/sol/pt.png" />
 
         <p>Ce panneau solaire atteint son efficacité maximale quand la résistance du circuit est de 85&Omega;. Notre objet connecté doit donc avoir une résistance maximal de 85&Omega; ou moins si l'on en ajoute une.</p>
-        <p>Cependant, nous ne connaissons pas l'évolution de la puissance en fonction de l'éclairage. Pour aller plus loin, nous allons faire une nouvelle expérience pour exprimer la puissance électrique en fonction de la luminosité. On pourra alors connaitre la puissance maximale d'un objet utilisable dans des conditions standards.</p>
+        <p>Cependant, nous ne connaissons pas l'évolution de la puissance en fonction de l'éclairage. Pour aller plus loin, nous allons faire une nouvelle expérience pour exprimer la puissance électrique en fonction de la luminosité. On pourra alors connaitre
+            la puissance maximale d'un objet utilisable dans des conditions standards.</p>
 
         <hr/>
 
         <h3>Expérience 2</h3>
 
-        <p>Nous allons maintenant chercher à calculer la puissance produite par la cellule en fonction du nombre de lux. Nous allons mettre une résistance de 85&Omega; pour avoir un courant électrique plus puissant permettant de réduire les erreurs dûes aux appareils.
-          Dans cette expérience nous ferons varier l'intensité lumineuse.</p>
+        <p>Nous allons maintenant chercher à calculer la puissance produite par la cellule en fonction du nombre de lux. Nous allons mettre une résistance de 85&Omega; pour avoir un courant électrique plus puissant permettant de réduire les erreurs dûes
+            aux appareils. Dans cette expérience nous ferons varier l'intensité lumineuse.</p>
 
         <h4>Matériel :</h4>
 
@@ -414,6 +416,6 @@
     </footer>
     <div id="tothetop"><img src="tothetop.png" title="Vers le haut de la page" /></div>
 </body>
-<script src="script.js"></script>
+<script src="script/script.js"></script>
 
 </html>
