--- a/presentation.html
+++ b/presentation.html
@@ -52,9 +52,7 @@
 
     <section id="content">
 
-        <h2>
-
-            Présentation Générale</h2>
+        <h2>Présentation Générale</h2>
 
         <h3>Problématique</h3>
 
